<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="pref_images">pref_images</string>
    <string name="pref_javascript">pref_javascript</string>
    <string name="app_name">Orweb</string>
<string name="errorHtml">&lt;b&gt;Sorry, but something went wrong...&lt;/b&gt;</string>
<string name="torInactive">Anonymous data connection not running</string>
<string name="torConnecting">Connecting...</string>
<string name="starttor">Open preferences</string>
    <string name="search_label">Browser</string>
    <string name="search_hint">Web address or search</string>
    <string name="search_button_text">Go</string>
<string name="default_homepage">https://check.torproject.org</string>
<string name="pref_homepage">pref_homepage</string>
<string name="pref_clearcache">pref_clearcache</string>
<string name="internal_web_url">http://orweb/</string>
<string name="torProxyNotInstalled">Orweb requires the Orbot application to be installed.</string>
<string name="cookiesBlockedFirstLine">Cookies</string>
<string name="cookiesBlockedSecondLine">Blocked</string>
<string name="allCookiesAreBlocked">All cookies are blocked. You can change this behaviour in the settings.</string>
<string name="acceptCookiesFrom">Accept cookies from:</string>
<string name="willAddToWhitelist">Ticking these sites will add them to your cookie whitelist.</string>

<string name="pref_proxy_group">Proxy Server Settings</string>

<string name="pref_proxy_type">Proxy Type</string>
<string name="pref_proxy_type_summary">The proxy type (http or socks)</string>

<string name="pref_proxy_host">Proxy Host</string>
<string name="pref_proxy_host_summary">The hostname or IP address of the HTTP proxy server</string>

<string name="pref_proxy_port">Proxy Port</string>
<string name="pref_proxy_port_summary">The socket port for the HTTP proxy server</string>

<string name="pref_user_agent_summary">Change how the browser identifies itself</string>
<string name="pref_user_agent_title">User Agent</string>

<string name="menu_go">Go</string>
<string name="menu_stop">Stop</string>
<string name="menu_forward">Forward</string>
<string name="menu_about">About</string>
<string name="menu_settings">Settings</string>
<string name="menu_reload">Reload</string>
<string name="menu_homepage">Homepage</string>

<string name="menu_clear">Clear History/Cache</string>
<string name="set_locale_title">Set Locale</string>
<string name="set_locale_summary">Choose the locale and language for Orbot</string>
<string name="load_images">Load images</string>
<string name="display_images_on_web_pages">Display images on Web pages</string>
<string name="enable_javascript">Enable JavaScript</string>

<string name="set_homepage">Set homepage</string>
<string name="clear_cache">Clear cache</string>
<string name="clear_cache_summary">Clear all cached page content</string>
<string name="clear_cache_message">The cache will be cleared.</string>

<string name="ref_title">Send referrer information		<string name="prompt_do_you_want_to_open_this_file_for_viewing_">Do you want to open this file for viewing?</string>
    </string>
<string name="ref_summary">Referrer information may reveal your browsing history</string>

<string name="history_title">Clear Back History</string>
<string name="history_summary">Clear all browser history as you browser. Warning: this cannot be undone.</string>

<string name="clear_cookies_title">Clear cookie data</string>
<string name="clear_cookies_summary">Clear all the browser cookies</string>
<string name="clear_cookies_message">The cookies will be cleared.</string>

<string name="cookie_behave_title">Cookie behaviour</string>
<string name="cookie_behave_summary">Accept or block cookies</string>

<string name="cookie_whitelist_title">Cookie whitelist</string>
<string name="cookie_whitelist_summary">Set which website can store cookies</string>
<string name="add_site_whitelist">Add site to whitelist</string>
<string name="title_download_manager">Download Manager</string>
<string name="prompt_would_you_like_to_download_this_file_">Would you like to download this file?</string>

		<string name="prompt_do_you_want_to_open_this_file_for_viewing_">Do you want to open this file for viewing?</string>

		<string name="orweb_proxy_error">Orweb is unable to configure proxy settings on your device.</string>

</resources>
